--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -5,6 +5,13 @@
       "legal": "Legal",
       "preguntas frecuentes": "Faq",
       "contacto": "Contact"
+    },
+    "header":{
+      "bienvenido": "Welcome to Atómico3",
+      "criptoactivo": "A crypto asset backed by lithium, promoting sustainability by reducing carbon emissions through tokenized incentives.",
+      "whitepaper": "Download Whitepaper",
+      "comprar token": "Buy Token",
+      "staking": "Staking"
     }
   }
   
