atomic info translations

--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -12,6 +12,19 @@
       "whitepaper": "Download Whitepaper",
       "comprar token": "Buy Token",
       "staking": "Staking"
+    },
+    "atomicInfo": {
+      "que es atomico": "What is Atómico3?",
+      "descripcion atomico p1":" Atomic3 is a token that represents the tokenization of mining assets, backed by lithium reserves certified under ni 43-101 standards. This process digitizes lithium reserves, allowing them to be traded on blockchain platforms.", 
+      "descripcion atomico p2": "Atómico3 democratizes access to investment in natural resources, offering transparency, security and liquidity. With its innovative approach, Atómico3 facilitates sustainable investment and economic development in lithium-rich regions, positioning it as a high-value digital asset in the global market.",
+      "criptoactivo responsable": "Responsible Cryptoasset",
+      "criptoactivo responsable descripcion": "Our token is backed by real lithium, with a value that grows alongside the demand for clean energy.",
+      "mercado objetivo": "Target Market",
+      "mercado objetivo descripcion": "Global investors with vision. Citizens committed to sustainability.",
+      "plataformas utilizadas": "Platforms Used",
+      "plataformas utilizadas descripcion": "Blockchain, official social networks and passionate communities, holders and technology enthusiasts."
+
+      
     }
   }
   
