--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -16,6 +16,13 @@
   "atomicInfo": {
     "que es atomico": "¿Qué es Atómico3?",
     "descripcion atomico p1":" Atómico3 es un token que representa la tokenización de activos mineros, respaldados por reservas de litio certificadas bajo normas ni 43-101. Este proceso digitaliza las reservas de litio, permitiendo su comercialización en plataformas blockchain.", 
-    "descripcion atomico p2": "Atómico3 democratiza el acceso a la inversión en recursos naturales, ofreciendo transparencia, seguridad y liquidez. Con su enfoque innovador, Atómico3 facilita la inversión sostenible y el desarrollo económico en regiones ricas en litio, posicionándolo como un activo digital de alto valor en el mercado global."
+    "descripcion atomico p2": "Atómico3 democratiza el acceso a la inversión en recursos naturales, ofreciendo transparencia, seguridad y liquidez. Con su enfoque innovador, Atómico3 facilita la inversión sostenible y el desarrollo económico en regiones ricas en litio, posicionándolo como un activo digital de alto valor en el mercado global.",
+    "criptoactivo responsable": "Criptoactivo Responsable",
+     "criptoactivo responsable descripcion": "Nuestro token está respaldado por litio real, con un valor que crece junto con la demanda de energía limpia.",
+     "mercado objetivo": "Mercado Objetivo",
+     "mercado objetivo descripcion": "  Inversores globales con visión. Ciudadanos comprometidos con la sostenibilidad.",
+     "plataformas utilizadas": "Plataformas Utilizadas",
+      "plataformas utilizadas descripcion": "Blockchain, redes sociales oficiales y comunidades apasionadas, holders y entusiastas de la tecnología."  
+
   }
 }
