--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -15,14 +15,28 @@
   },
   "atomicInfo": {
     "que es atomico": "¿Qué es Atómico3?",
-    "descripcion atomico p1":" Atómico3 es un token que representa la tokenización de activos mineros, respaldados por reservas de litio certificadas bajo normas ni 43-101. Este proceso digitaliza las reservas de litio, permitiendo su comercialización en plataformas blockchain.", 
+    "descripcion atomico p1": " Atómico3 es un token que representa la tokenización de activos mineros, respaldados por reservas de litio certificadas bajo normas ni 43-101. Este proceso digitaliza las reservas de litio, permitiendo su comercialización en plataformas blockchain.",
     "descripcion atomico p2": "Atómico3 democratiza el acceso a la inversión en recursos naturales, ofreciendo transparencia, seguridad y liquidez. Con su enfoque innovador, Atómico3 facilita la inversión sostenible y el desarrollo económico en regiones ricas en litio, posicionándolo como un activo digital de alto valor en el mercado global.",
     "criptoactivo responsable": "Criptoactivo Responsable",
-     "criptoactivo responsable descripcion": "Nuestro token está respaldado por litio real, con un valor que crece junto con la demanda de energía limpia.",
-     "mercado objetivo": "Mercado Objetivo",
-     "mercado objetivo descripcion": "  Inversores globales con visión. Ciudadanos comprometidos con la sostenibilidad.",
-     "plataformas utilizadas": "Plataformas Utilizadas",
-      "plataformas utilizadas descripcion": "Blockchain, redes sociales oficiales y comunidades apasionadas, holders y entusiastas de la tecnología."  
+    "criptoactivo responsable descripcion": "Nuestro token está respaldado por litio real, con un valor que crece junto con la demanda de energía limpia.",
+    "mercado objetivo": "Mercado Objetivo",
+    "mercado objetivo descripcion": "  Inversores globales con visión. Ciudadanos comprometidos con la sostenibilidad.",
+    "plataformas utilizadas": "Plataformas Utilizadas",
+    "plataformas utilizadas descripcion": "Blockchain, redes sociales oficiales y comunidades apasionadas, holders y entusiastas de la tecnología."
+  },
+  "videoSection": {
+    "video section title": "¡Mira el video para conocer más!"
+  },
+  "InvestSection": {
+    "¿Por qué invertir en Atómico3?": "¿Por qué invertir en Atómico3?",
+    "Seguridad": "Seguridad",
+    "Seguridad descripcion": "Al estar respaldada por litio, la moneda puede diversificar los riesgos asociados con las reservas tradicionales, como el oro o las divisas fiat. esto puede hacerla menos susceptible a las fluctuaciones en los mercados financieros globales y a las políticas monetarias de los países emisores de monedas fiat.",
+    "tecnologia y beneficios": "Tecnología y Beneficios",
+    "tecnologia y beneficios descripcion": "La tokenización del litio puede revolucionar la manera en que se comercian y utilizan los recursos minerales, proporcionando beneficios significativos en términos de accesibilidad, liquidez y transparencia.",
+    "soporte": "Soporte",
+    "soporte descripcion": "Ofrecemos soporte para responder a cualquiera de sus consultas."
+
 
   }
+  
 }
