--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -15,7 +15,7 @@
   },
   "atomicInfo": {
     "que es atomico": "What is Atómico3?",
-    "descripcion atomico p1": " Atomic3 is a token that represents the tokenization of mining assets, backed by lithium reserves certified under ni 43-101 standards. This process digitizes lithium reserves, allowing them to be traded on blockchain platforms.",
+    "descripcion atomico p1": " Atómico3 is a token that represents the tokenization of mining assets, backed by lithium reserves certified under ni 43-101 standards. This process digitizes lithium reserves, allowing them to be traded on blockchain platforms.",
     "descripcion atomico p2": "Atómico3 democratizes access to investment in natural resources, offering transparency, security and liquidity. With its innovative approach, Atómico3 facilitates sustainable investment and economic development in lithium-rich regions, positioning it as a high-value digital asset in the global market.",
     "criptoactivo responsable": "Responsible Cryptoasset",
     "criptoactivo responsable descripcion": "Our token is backed by real lithium, with a value that grows alongside the demand for clean energy.",
@@ -41,5 +41,26 @@
     "como funciona": "How does it work?",
     "clickea el enlace": "Click the link below to find out!",
     "saber mas": "Learn more"
+  },
+  "faq":{
+    "preguntas frecuentes": "FAQ",
+    "que es atomico": "What is Atómico3?",
+    "que es atomico descripcion": "Atomic 3 is a digital token backed by lithium reserves certified under NI 43-101. This process digitizes lithium reserves, allowing them to be traded on blockchain platforms.",
+    "¿Por qué no veo reflejado el precio de Atómico3 en mi billetera?": "Why don't I see the price of Atomico3 reflected in my wallet?",
+    "El token se encuentra en lista de espera en CoinMarketCap": "The token is currently on a waiting list at CoinMarketCap for listing, which is why the price will be reflected soon.",
+    "¿Dónde puedo ver la valuación de Atómico3?": "Where can I see the valuation of Atómico3?",
+    "Puedes ver la valuación actual de Atómico3 en Dex descentralizadas como Quickswap": "You can view the current valuation of Atómico3 on decentralized Dex such as Quickswap.",
+    "¿Por qué el token Atómico3 no tiene liquidez?": "Why does the Atómico3 token have no liquidity?",
+    "El token fue lanzado el 12 de agosto y la liquidez formal será inyectada cuando éste sea listado en CoinMarketCap (para lo cual estamos trabajando)": "The token was launched on August 12 and formal liquidity will be injected when it is listed on CoinMarketCap (for which we are working on).",
+    "¿Cuál es el contrato de Atómico3?": "What is the contract of Atómico3?",
+    "El contrato de token es el siguiente en la red Polygon": "The token contract is as follows in the Polygon network: 0x22a79a08ddb74a9f1a4ebe5da75300ad9f1aed76",
+    "¿Proyección del precio de Atómico3 en el futuro?": "What's the price projection fot Atómico3 in the future?",
+    "Se comportará en relación al precio de carbonato de litio internacional (li2co3)": "Will behave in relation to the price of international lithium carbonate (li2co3).",
+    "Link para consultar el precio actual del carbonato de litio": "Link to consult the current price of lithium carbonate:",
+    "Click aquí":"Click here!",
+    "¿Ya puedo hacer staking de los AT3 que adquirí?": "Can I now do the staking of the AT3 that I purchased?",
+  "Si puedo": "Yes, I can. To do this I must click on the blue button that says 'staking' located at the top of the page. Then in the pop-up window, I will be asked to link my wallet (to be able to say from where my at3 will come from). There I will see a form that I must fill in with my personal data and a contact email, this will allow me to choose the AT3 I want to place and the possible terms (60 days, 180 and 240). Finally, a confirmation will appear to confirm that it has been completed correctly."
+
+
   }
 }
