--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -66,6 +66,8 @@
     "contacto": "Contact",
     "links utiles": "Helpful Links",
     "Comprar Atómico3": "Buy Atómico3",
-    "Preguntas Frecuentes": "FAQ"
+    "Preguntas Frecuentes": "FAQ",
+     "Términos y Condiciones": "Terms and Conditions",
+    "Política de privacidad": "Privacy Policy"
   }
 }
