--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -66,6 +66,9 @@
     "contacto": "Contacto",
     "links utiles": "Links útiles",
     "Comprar Atómico3": "Comprar Atómico3",
-    "Preguntas Frecuentes": "Preguntas Frecuentes"
+    "Preguntas Frecuentes": "Preguntas Frecuentes",
+    "Términos y Condiciones": "Términos y Condiciones",
+    "Política de privacidad": "Política de privacidad"
+
   }
 }
