--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -57,11 +57,11 @@
     "¿Proyección del precio de Atómico3 en el futuro?": "¿Proyección del precio de Atómico3 en el futuro?",
     "Se comportará en relación al precio de carbonato de litio internacional (li2co3)": "Se comportará en relación al precio de carbonato de litio internacional (li2co3).",
     "Link para consultar el precio actual del carbonato de litio": "Link para consultar el precio actual del carbonato de litio:",
-    "Click aquí":"Click aquí",
+    "Click aquí": "Click aquí",
     "¿Ya puedo hacer staking de los AT3 que adquirí?": "¿Ya puedo hacer staking de los AT3 que adquirí?",
     "Si puedo": "Si puedo. Para ello debo presionar en el botón azul que dice 'staking' ubicado en la parte superior de la página. Luego en la ventana emergente, se me pedirá vincular mi wallet (para poder decir desde donde van a salir mis at3). Allí me aparecerá un formulario que debo completar con mis datos personales y un mail de contacto, ello me va a permitir elegir los AT3 que quiero colocar y los plazos posibles (60 días , 180 y 240 ). Finalmente aparecerá una confirmación sobre que quedó el mismo terminado correctamente."
   },
-  "footer":{
+  "footer": {
     "redes sociales": "Redes Sociales",
     "contacto": "Contacto",
     "links utiles": "Links útiles",
@@ -69,6 +69,11 @@
     "Preguntas Frecuentes": "Preguntas Frecuentes",
     "Términos y Condiciones": "Términos y Condiciones",
     "Política de privacidad": "Política de privacidad"
-
+  },
+  "stakingView": {
+    "¿Qué es el Staking?": "¿Qué es el Staking?",
+    "¿Qué es el Staking? Descripcion": "Consiste en depositar tus Atómico3 en un contrato inteligente (0xAAF3AC68Bf80d995d7793a401653713A05a67B08), manteniéndolos allí durante el plazo que elijas, beneficiándote de los intereses según el plazo elegido. Serán devueltos a tu monedero una vez finalizado el plazo (salvo que elijas renovarlo por un nuevo plazo).",
+    "¿Cómo lo puedo hacer?": "¿Cómo lo puedo hacer?",
+    "¿Cómo lo puedo hacer? descripcion": "Para ello, debo hacer clic en el botón de abajo. A continuación, en la ventana emergente, se me pedirá que vincule mi monedero (para poder decir de dónde saldrá mi AT3). Aparecerá un formulario que debo rellenar con mis datos personales y un email de contacto, esto me permitirá elegir el AT3 que quiero colocar y los plazos posibles (60 días, 180 y 240). Por último, aparecerá una confirmación de que se ha rellenado correctamente."
   }
 }
