dapp links updated

--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -68,13 +68,14 @@
     "Comprar Atómico3": "Buy Atómico3",
     "Preguntas Frecuentes": "FAQ",
      "Términos y Condiciones": "Terms and Conditions",
-    "Política de privacidad": "Privacy Policy"
+    "Política de privacidad": "Privacy Policy",
+    "todos los derechos reservados": "All rights reserved."
   },
   "stakingView":{
      "¿Qué es el Staking?": "What is Staking?",
     "¿Qué es el Staking? Descripcion": "It consists of depositing your Atómico3 in a smart contract (0xAAF3AC68Bf80d995d7793a401653713A05a67B08), keeping them there for the term you choose, benefiting from the interest according to the chosen term. They will be returned to your wallet once the term has expired (unless you choose to renew it for a new term).",
     "¿Cómo lo puedo hacer?": "How can I do It?",
-    "¿Cómo lo puedo hacer? descripcion": "To do this I must click on button below! Then, in the pop-up window, I will be asked to link my wallet (to be able to say from where my AT3 will come from). There will appear a form that I must fill in with my personal data and a contact email, this will allow me to choose the AT3 I want to place and the possible terms (60 days, 180 and 240). Finally, a confirmation will appear to confirm that it has been completed correctly."
+    "¿Cómo lo puedo hacer? descripcion": "Click on the button below! "
 
 
 
