--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -78,6 +78,9 @@
     "¿Cómo lo puedo hacer? descripcion": "¡Haz clic en el botón de abajo!"
   },
   "legal": {
+    "Términos y condiciones de pago del token AT3": "AT3 Token Payment Terms and Conditions"
+  },
+  "privacidad":{
     
   }
 }
