--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -76,8 +76,8 @@
     "¿Qué es el Staking? Descripcion": "It consists of depositing your Atómico3 in a smart contract (0xAAF3AC68Bf80d995d7793a401653713A05a67B08), keeping them there for the term you choose, benefiting from the interest according to the chosen term. They will be returned to your wallet once the term has expired (unless you choose to renew it for a new term).",
     "¿Cómo lo puedo hacer?": "How can I do It?",
     "¿Cómo lo puedo hacer? descripcion": "Click on the button below! "
-
-
-
+  },
+  "legal": {
+    "Términos y condiciones de pago del token AT3": "Términos y condiciones de pago del token AT3"
   }
 }
