happy spring button added

--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -10,6 +10,7 @@
     "bienvenido": "Welcome to Atómico3",
     "criptoactivo": "A crypto asset backed by lithium, promoting sustainability by reducing carbon emissions through tokenized incentives.",
     "whitepaper": "Download Whitepaper",
+    "feliz primavera": "Happy Spring",
     "comprar token": "Buy Token",
     "staking": "Staking"
   },
