button links and happy spring button updated

--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -10,7 +10,7 @@
     "bienvenido": "Bienvenido a Atómico3",
     "criptoactivo": "Un criptoactivo respaldado por litio, que fomenta la sostenibilidad, mediante la reducción de emisiones de carbono, a través de incentivos tokenizados.",
     "whitepaper": "Descargar Whitepaper",
-    "feliz primavera": "Feliz Primavera",
+    "feliz primavera": "¡Feliz Primavera!",
     "comprar token": "Comprar Token",
     "staking": "staking"
   },
