advances on modal 2

--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -14,6 +14,12 @@
     "comprar token": "Buy Token",
     "staking": "Staking"
   },
+  "modal": {
+    "feliz primavera descripcion": "The following form must be completed only by those who purchased AT3 between 0:00 on Monday, September 23 and 23:59 on September 30.",
+    "recordatorio descripcion": "Remember that those who purchase AT3 between 0:00 on Monday, September 23 and 23:59 on September 30, to obtain the additional 5% of Spring Week must complete the form which is accessed by clicking on the button from 'Happy Spring'" 
+    
+  },
+
   "atomicInfo": {
     "que es atomico": "What is Atómico3?",
     "descripcion atomico p1": " Atómico3 is a token that represents the tokenization of mining assets, backed by lithium reserves certified under ni 43-101 standards. This process digitizes lithium reserves, allowing them to be traded on blockchain platforms.",
